--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Stylizacja kontenerów */
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
 }
 
-/* Nagłówek */
 header {
-    background: #0078d7;
+    background: #333;
     color: #fff;
-    padding: 10px 0;
+    padding: 1rem 0;
     text-align: center;
 }
 
@@ -25,86 +23,68 @@ header h1 {
     margin: 0;
 }
 
-/* Nawigacja */
-nav {
-    background: #333;
-    color: #fff;
-}
-
 nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
+    list-style: none;
+    background-color: #333;
 }
 
 nav ul li {
-    margin: 0 10px;
+    display: inline;
 }
 
-nav ul li a {
+nav a {
+    text-decoration: none;
     color: #fff;
-    text-decoration: none;
-    padding: 10px;
-    display: block;
+    background: #333;
+    padding: .5rem 1rem;
+    display: inline-block;
 }
 
-nav ul li a:hover {
-    background: #0078d7;
-    transition: background-color 0.3s;
+nav a:hover,
+nav a:focus {
+    background: #555;
 }
 
-/* Główna sekcja */
+/* Dodatkowe style dla większych linków */
+nav ul li a {
+    font-size: 1.2em; /* Zwiększanie rozmiaru tekstu */
+    color: black; /* Zmiana koloru tekstu */
+}
+
+/* Style dla sekcji głównej */
 main {
-    padding: 20px 0;
+    padding: 1rem;
 }
 
-main h2 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-main p {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-/* Lista kategorii */
-.category-list {
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.category-list li {
-    width: 200px;
-    margin-bottom: 20px;
-}
-
-.category-list li a {
-    display: block;
-    background: #f4f4f4;
-    text-align: center;
-    padding: 10px;
-    border: 1px solid #ddd;
-    color: #333;
-    text-decoration: none;
-}
-
-.category-list li a:hover {
-    border-color: #0078d7;
-    transition: border-color 0.3s;
-}
-
-/* Stopka */
+/* Style dla stopki */
 footer {
     background: #333;
     color: #fff;
     text-align: center;
-    padding: 20px 0;
-    margin-top: 20px;
+    padding: 1rem 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
-footer p {
-    margin: 0;
+/* Style dla kontenera */
+.container {
+    max-width: 1100px;
+    margin: auto;
+    overflow: auto;
+    padding: 0 2rem;
+}
+
+.category-list {
+    padding: 2rem;
+}
+
+.category-list li {
+    margin-bottom: 1rem;
+}
+
+.category-list li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 1.1em;
 }
